    <resources>
    <string name="app_name">Bubbles</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_maps">Map</string>
    <string name="button_camera">Camera</string>
    <string name="image_cd_camera">this is a generic content description</string>
    <string name="app_id">386051131588917</string>
    <string name="action_simple_login">With Simple Login Button</string>
    <string name="action_custom_login">With Custom Login Button</string>
    <string name="title_activity_new_login">Log In</string>
    <string name="title_activity_new_main">Main</string>

    <!-- DAMIAN'S GLOBAL STRING VARIABLES -->
    <string name="null_user">~null~user~</string>
    <string name="error_connection">Server is not reachable.</string>
    <string name="error_logged_in">Incorrect user details.</string>
    <string name="message_registration">Registration successful.</string>


    <!-- FRAGMENT_LOGIN -->
    <string name="log_in">Log In</string>
    <string name="username_or_email_hint">Username or Email</string>
    <string name="password_hint">Password</string>
    <string name="register">New user? Sign up here!</string>
    <!-- FRAGMENT_REGISTER -->
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <!-- END OF DAMIAN'S GLOBAL STRING VARIABLES -->

    <!--_________________________________________________________________________________________-->
    <!--______________________________BRYANT'S STRING VARIABLES__________________________________-->
    <!--_________________________________________________________________________________________-->

    <string name="About">About</string>
    <string name="Accept">Accept</string>
    <string name="Account">ACCOUNT</string>
    <string name="Account_">Account</string>
    <string name="Add_comment">Add comment</string>
    <string name="Add_Episode_Title">Add Episode Title</string>
    <string name="Add_Friends_to_Episode">Add Friends to Episode</string>
    <string name="Add_To_Current_Location">Add To Current Location</string>
        <string name="Adventure">Adventure</string>
    <string name="alert_dialog_friend_request_received">Friend request received.</string>
    <string name="alert_dialog_friend_request_sent">Friend request sent.\n\nDo you want to cancel the friend request?</string>
    <string name="All_friends_already">All of your friends are already invited.</string>
        <string name="All_Time">ALL TIME</string>
    <string name="An_Episode_with_the_title_already_exists.">An Episode with the title already exists.</string>
    <string name="Are_you_sure_you_do_not_want_to_send_add_friends">Are you sure you don\'t want to add friends to the Episode now? You can always do so later.</string>
    <string name="MOST_DISLIKES">Most Dislikes</string>
    <string name="MOST_LIKES">Most Likes</string>
    <string name="MOST_VIEWS">Most Views</string>
    <string name="TOP_RATED">Top Rated</string>
    <string name="Apply">Apply</string>
    <string name="at">&#160;at&#160;</string>
    <string name="Attending">Attending</string>
        <string name="Baseball">Baseball</string>
        <string name="Basketball">Basketball</string>
        <string name="BECAME_FRIENDS_WITH">&#160;became friends with</string>
        <string name="Blocking">Blocking</string>
    <string name="Block">Block</string>
    <string name="Bubbles">Bubbles</string>
    <string name="Camera">Camera</string>
    <string name="Cancel">Cancel</string>
        <string name="Carnival">Carnival</string>
    <string name="Change_start_date">Change start date</string>
    <string name="Change_profile_picture">Change profile picture</string>
    <string name="CHOOSE_FROM_OUR_COLLECTION">CHOOSE FROM OUR COLLECTION:</string>
    <string name="Choose_logo">Choose logo</string>
    <string name="Comments">Comments</string>
        <string name="Concert">Concert</string>
    <string name="Confirm_New_Password">Confirm New Password</string>
        <string name="Confirm_Password">Confirm Password</string>
        <string name="Create_Episode">Create Episode</string>
    <string name="CREATED">&#160;created</string>
    <string name="Crop_Image">Crop Image</string>
        <string name="Cruise">Cruise</string>
    <string name="Current_Location">Current Location</string>
    <string name="Current_Password">Current Password</string>
    <string name="Decline">Decline</string>
    <string name="Delete_episode">Delete episode</string>
    <string name="Do_not_display_again">Don\'t display again</string>
    <string name="Done">Done</string>
    <string name="Edit">Edit</string>
    <string name="Edit_episode">Edit Episode</string>
    <string name="Edit_profile">Edit profile</string>
    <string name="Email">Email</string>
    <string name="End_Episode">End episode</string>
    <string name="Ending_date_time">Ending Date &amp; Time</string>
    <string name="Episode_Requests">Episode Requests</string>
    <string name="Episodes">Episodes</string>
    <string name="Explore">Explore</string>
        <string name="Festival">Festival</string>
    <string name="Filter">Filter</string>
        <string name="First_Name">First Name</string>
        <string name="Football">Football</string>
    <string name="Friend_Requests">Friend Requests</string>
    <string name="Friend_Requests_caps">FRIEND REQUESTS</string>
    <string name="Friends">Friends</string>
    <string name="Friend">Friend</string>
    <string name="Full_name">Full name</string>
    <string name="Gallery">Gallery</string>
        <string name="Game">Game</string>
        <string name="Get_Together">Get Together</string>
        <string name="Hang_Out">Hang Out</string>
    <string name="Hike">Hike</string>
    <string name="Hosting">Hosting</string>
    <string name="Image_and_Logo">Image &amp; Logo</string>
    <string name="Invites_successfully_sent">Invite(s) successfully sent!</string>
    <string name="JOINED">&#160;joined</string>
    <string name="Later">Later</string>
        <string name="Last_Name">Last Name</string>
        <string name="Leave_episode">Leave episode</string>
    <string name="LED_Light">LED Light</string>
    <string name="Live">Live</string>
    <string name="Live_Episodes">Live Episodes</string>
    <string name="IN_YOUR_NEIGHBORHOOD">IN YOUR NEIGHBORHOOD</string>
    <string name="live_most_likes">LIVE - MOST LIKES</string>
    <string name="live_most_views">LIVE - MOST VIEWS</string>
    <string name="live_top_rated">LIVE - TOP RATED</string>
    <string name="Locations">Locations</string>
    <string name="Log_Out">Log Out</string>
    <string name="Log_out_question">Log out?</string>
    <string name="Logo">Logo</string>
    <string name="Map">Map</string>
    <string name="Media">Media</string>
    <string name="Misc">Miscellaneous</string>
        <string name="Movie">Movie</string>
    <string name="Music">Music</string>
        <string name="Musical">Musical</string>
    <string name="My_Episodes">My Episodes</string>
    <string name="My_Map">My Map</string>
    <string name="My_Profile">My Profile</string>
    <string name="New_Password">New Password</string>
    <string name="News_Feed">News Feed</string>
    <string name="Notifications">Notifications</string>
        <string name="Opera">Opera</string>
    <string name="Options_Menu">Options Menu</string>
    <string name="OK">OK</string>
    <string name="OR"><i><b><u>OR</u></b></i></string>
    <string name="Participants">Participants</string>
        <string name="Party">Party</string>
    <string name="Password">Password</string>
    <string name="Personal">Personal</string>
    <string name="Phone_Number">Phone Number</string>
        <string name="Photo_deleted">Profile photo deleted!</string>
        <string name="Photos">Photos</string>
        <string name="Profile_photo_uploaded">Profile photo uploaded!</string>
    <string name="Privacy">Privacy</string>
    <string name="Private">Private</string>
    <string name="Profile">PROFILE</string>
    <string name="Profile_picture">Profile Photo</string>
    <string name="Profile_Pictures">Profile Pictures</string>
    <string name="Pictures">Pictures</string>
    <string name="Received_Friend_Requests">Received Friend Requests</string>
    <string name="Register">Register</string>
        <string name="Religious">Religious</string>
    <string name="Remove_as_friend">Remove as friend</string>
    <string name="Report">Report</string>
    <string name="Report_user">Report user</string>
        <string name="Review">Review</string>
    <string name="Rotate">Rotate</string>
    <string name="Save">Save</string>
    <string name="Search">Search&#8230;</string>
    <string name="Search_Episodes">Search Episodes&#8230;</string>
    <string name="Search_Users">Search Users&#8230;</string>
    <string name="Send_To">Send To&#8230;</string>
    <string name="Sent_Friend_Requests">Sent Friend Requests</string>
    <string name="Select">Select</string>
        <string name="Select_Category">SELECT CATEGORY</string>
        <string name="Select_Type">SELECT TYPE</string>
    <string name="Settings">SETTINGS</string>
        <string name="Sign_Up">Sign Up</string>
    <string name="Social">Social</string>
        <string name="Soccer">Soccer</string>
    <string name="Sound">Sound</string>
    <string name="Sport">Sport</string>
    <string name="Starting_Date_and_Time">Starting Date &amp; Time</string>
    <string name="Sync_With_Facebook">Sync With Facebook</string>
    <string name="Sync_With_Other_Media">Sync With Other Media</string>
        <string name="Tennis">Tennis</string>
    <string name="Title">Title</string>
    <string name="Top_Episodes">Top Episodes</string>
    <string name="Travel">Travel</string>
    <string name="Unblock">UNBLOCK</string>
        <string name="Upload_a_profile_picture">Upload a profile photo!</string>
    <string name="Upload_From">Upload From:</string>
    <string name="UPLOAD_IMAGE">Upload image</string>
    <string name="Users">Users</string>
    <string name="Username">Username</string>
    <string name="Vacation">Vacation</string>
    <string name="Vibration">Vibration</string>
    <string name="View_All_My_Episodes">View All Your Episodes&#8230;</string>
    <string name="View_More_Current_Episodes">View More Current Episodes&#8230;</string>
    <string name="View_More_Top_Episodes">View More Top Episodes&#8230;</string>
        <string name="Wedding">Wedding</string>
    <string name="Would_you_like_to_add_friends_now">Would you like to add friends now?</string>
    <string name="Yes">Yes</string>

    <string name="transition_image">image</string>
    <string name="transition_quote">quote</string>
    <string name="transition_attribution">attribution</string>
    <!-- CONTENT DESCRIPTION -->
    <string name="left_button_profile_contentDescription">This is the left ImageButton in ProfileActivity. It changes depending on which user is viewing who\'s profile.</string>
    <string name="middle_button_profile_contentDescription">This is the middle ImageButton in ProfileActivity. It changes depending on which user is viewing who\'s profile.</string>
    <string name="right_button_profile_contentDescription">This is the right ImageButton in ProfileActivity. It changes depending on which user is viewing who\'s profile.</string>

    <!-- ADDED BY DAMIAN TO RESOLVE INCONSISTENCIES AFTER RECONFIGURING GRADLE AND SETTINGS -->
    <string name="decline">Decline.</string>

    <!--_________________________________________________________________________________________-->
    <!--___________________________END OF BRYANT'S STRING VARIABLES______________________________-->
    <!--_________________________________________________________________________________________-->

</resources>
