<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:theme="@style/AppTheme"
    android:orientation="vertical"
    android:id="@+id/main_tab_account"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:gravity="center"
        android:text="@string/Profile"
        android:textAppearance="?android:textAppearanceSmall" />

        <TextView
            android:id="@+id/tvMyProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/My_Profile"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:drawableLeft="@mipmap/ic_person_outline_black_24dp"
            android:drawablePadding="5dp" />


        <TextView
            android:id="@+id/tvMyEpisodes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/My_Episodes"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:drawableLeft="@mipmap/ic_whatshot_black_24dp"
            android:drawablePadding="5dp"/>

        <TextView
            android:id="@+id/tvMyMap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/My_Map"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:drawableLeft="@mipmap/ic_public_black_24dp"
            android:drawablePadding="5dp"/>

        <TextView
            android:id="@+id/tvProfilePictures"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Profile_Pictures"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:drawableLeft="@mipmap/ic_collections_black_24dp"
            android:drawablePadding="5dp"/>

    <TextView
            android:id="@+id/tvFriends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Friends"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:drawableLeft="@mipmap/ic_people_outline_black_24dp"
            android:drawablePadding="5dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Settings"
        android:textAppearance="?android:textAppearanceSmall" />

        <TextView
            android:id="@+id/tvNotifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Notifications"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:drawablePadding="5dp"
            android:drawableLeft="@mipmap/ic_notifications_none_black_24dp"/>

        <TextView
            android:id="@+id/tvPrivacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Privacy"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:drawableLeft="@mipmap/ic_settings_black_24dp"
            android:drawablePadding="5dp"/>

        <TextView
            android:id="@+id/tvMedia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Media"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:drawableLeft="@mipmap/ic_image_black_24dp"
            android:drawablePadding="5dp"/>

       <TextView
            android:id="@+id/tvBlocking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Blocking"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:drawableLeft="@mipmap/ic_block_black_24dp"
           android:drawablePadding="5dp"/>

       <TextView
            android:id="@+id/tvAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/About"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:drawableLeft="@mipmap/ic_info_outline_black_24dp"
           android:drawablePadding="5dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Account"
            android:textAppearance="?android:textAppearanceSmall" />

        <TextView
            android:id="@+id/tvPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Password"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:drawableLeft="@mipmap/ic_lock_outline_black_24dp"
            android:drawablePadding="5dp"/>

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Email"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:drawableLeft="@mipmap/ic_mail_outline_black_24dp"
            android:drawablePadding="5dp"/>

        <TextView
            android:id="@+id/tvPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Phone_Number"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:drawableLeft="@mipmap/ic_phone_black_24dp"
            android:drawablePadding="5dp"/>

        <TextView
            android:id="@+id/tvSyncWithOtherMedia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Sync_With_Other_Media"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:drawableLeft="@mipmap/ic_sync_black_24dp"
            android:drawablePadding="5dp"/>

        <TextView
            android:id="@+id/tvLogOut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Log_Out"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:drawableLeft="@mipmap/ic_power_settings_new_black_24dp"
            android:drawablePadding="5dp"/>
</LinearLayout>
</ScrollView>