<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingRight="50dp"
    android:paddingLeft="50dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/AppColor"
        app:cardCornerRadius="10dp">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:gravity="center_horizontal"
                    android:text="@string/Select_Type"
                    android:textAppearance="@android:style/TextAppearance.Small"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>
                <TextView
                    android:id="@+id/tvMusic"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/Music"
                    android:textAppearance="@android:style/TextAppearance.Medium"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/LightGrayAndroid"/>
                <TextView
                    android:id="@+id/tvConcert"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/Concert"
                    android:textAppearance="@android:style/TextAppearance.Medium"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/LightGrayAndroid"/>
                <TextView
                    android:id="@+id/tvFestival"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/Festival"
                    android:textAppearance="@android:style/TextAppearance.Medium"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/LightGrayAndroid"/>
                <TextView
                    android:id="@+id/tvMusical"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/Musical"
                    android:textAppearance="@android:style/TextAppearance.Medium"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/LightGrayAndroid"/>
                <TextView
                    android:id="@+id/tvOpera"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:text="@string/Opera"
                    android:textAppearance="@android:style/TextAppearance.Medium"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </android.support.v7.widget.CardView>
</LinearLayout>
