<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/AppColor"
        app:cardCornerRadius="10dp">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tvRemoveFriend"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/Remove_as_friend"
                    android:textAppearance="@android:style/TextAppearance.Medium"/>
                <TextView
                    android:id="@+id/tvBlockUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/Block"
                    android:textAppearance="@android:style/TextAppearance.Medium"/>
                <TextView
                    android:id="@+id/tvReportUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/Report_user"
                    android:textAppearance="@android:style/TextAppearance.Medium"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </android.support.v7.widget.CardView>
</LinearLayout>
